@@ -162,6 +162,12 @@ sub _remaining_imports {
     my @overloads = grep { $imports{$_} eq 'overload::nil' } keys %imports;
     delete @imports{@overloads} if @overloads;
 
+    if ($] < 5.010)
+    {
+        my @constants = grep { $imports{$_} eq 'constant::__ANON__' } keys %imports;
+        delete @imports{@constants} if @constants;
+    }
+
     return \%imports;
 }
 
