@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - also special case constant subs, which show up in the symbol table before
+  perl 5.010 as 'constant::__ANON__'
 
 0.11      2014-06-15 04:02:16Z
   - the return value of namespaces_clean() and all_namespaces_clean() is now
